--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
-description: 欢迎来到我的个人站~
+title: 蒋佳豪
+subtitle: 个人主页
+description: 在此存放一些实验心得，学习到的知识，抑或是近期的所见所闻所想
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Novakru
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://leopardpan.cn"
+avatarDesc: system / NKU
+url: "http://Novakru.github.io"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
@@ -19,25 +19,24 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    github: Novakru
     # zhihu: panpanleopard
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
+    # jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 1748492421@qq.com
 
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+    # id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3  
-    host: auto  
+    # id: UA-84134159-3  
+    # host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
